Bug 1679583 - Make "JS XPCOM" and "SubScript" marker stacks include helpful labels. r=mstange

We need to have the label in place before placing the marker and
capturing the accompanying stack to be able to identify the loaded JS.

Differential Revision: https://phabricator.services.mozilla.com/D98094